[project]
name = "miyao"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hsiaoming Yang", email = "me@lepture.com" }
]
dynamic = [
  "version",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "joserfc>=1.0.4",
]

[project.scripts]
miyao = "miyao.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/miyao/__init__.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "E722", # bare-except
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]
